--- a/src/MainBundle/Resources/views/Component/_navigation.html.twig
+++ b/src/MainBundle/Resources/views/Component/_navigation.html.twig
@@ -4,7 +4,8 @@
   </div>
   <div class="blog-category">
     <p class="blog-nav-title">Categories</p>
-    {{ render(controller('MainBundle:Category:showCategory')) }}
+    {# render conntroller with shop categorys #}
+    {#{{ render(controller('MainBundle:Category:showCategory')) }}#}
   </div>
   <div class="blog-teg">
     <p class="blog-nav-title">Tags</p>
