Add search component element.

--- a/web/assets/src/scss/Component/_mmenu.scss
+++ b/web/assets/src/scss/Component/_mmenu.scss
@@ -8,6 +8,10 @@
   // Navigation.
   .mmenu-navigation {
     @include span(9 of 12);
+
+	li{
+	  display: inline-block;
+	}
   }
 
   // User info.
