--- a/src/MainBundle/Resources/views/Component/_navigation.html.twig
+++ b/src/MainBundle/Resources/views/Component/_navigation.html.twig
@@ -1,13 +1,14 @@
 <div class="blog-navigation">
-  <div class="blog-search">
-    <p class="blog-nav-title">Search</p>
-  </div>
-  <div class="blog-category">
-    <p class="blog-nav-title">Categories</p>
-    {{ render(controller('MainBundle:Category:showCategory')) }}
-  </div>
-  <div class="blog-teg">
-    <p class="blog-nav-title">Tags</p>
-    {{ render(controller('MainBundle:Tag:showTag')) }}
-  </div>
+    <div class="blog-search">
+        <p class="blog-nav-title">Search</p>
+        {{ render(controller('MainBundle:Search:component')) }}
+    </div>
+    <div class="blog-category">
+        <p class="blog-nav-title">Categories</p>
+        {{ render(controller('MainBundle:Category:showCategory')) }}
+    </div>
+    <div class="blog-teg">
+        <p class="blog-nav-title">Tags</p>
+        {{ render(controller('MainBundle:Tag:showTag')) }}
+    </div>
 </div>
